--- a/bd.html
+++ b/bd.html
@@ -11,7 +11,7 @@
     <body>
         <h1>Banco de dados sobre maioridade penal </h1>
         
-         <div style="margin:0 auto"> 
+         <div style="margin:0 10%"> 
          
         <iframe src="https://www.obvibase.com/#token/dYt6JkSnCWAf/r/E6c8BvsbO569" width="90%" height="600px" frameborder="no">
         </iframe>
